docs/config_examples/next-gen-routes/routes/edge-route-with-bigip-reference-in-ssl-annotation.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/clientssl: /Common/foo-clientssl
    virtual-server.f5.com/health: '[{"path": "pytest-foo-1.com/","send": "HTTP GET
      pytest-foo-1.com/", "recv": "","interval": 2,"timeout": 5,  "type": "http"}]'
  labels:
    f5type: systest
  name: svc-pytest-foo-1-com
  namespace: foo
spec:
  host: pytest-foo-1.com
  path: /
  tls:
    termination: edge
  to:
    kind: Service
    name: svc-pytest-foo-1-com
    weight: 100
