docs/config_examples/next-gen-routes/routes/path-rewrite.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: simpleroute
    f5type: systest
  annotations:
    # rewrite-target-url annotation will redirect any traffic for "http://test.com/bar" to "test.com/foo"
    virtual-server.f5.com/rewrite-target-url: /foo
  name: simpleroute
spec:
  host: test.com
  path: "/bar"
  port:
    targetPort: 80
  to:
    kind: Service
    name: svc1
