docs/config_examples/next-gen-routes/routes/route-path-based-ab-deploy.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    f5type: systest
  name: svc-pytest-foo-3-com
  namespace: foo
spec:
  alternateBackends:
    - kind: Service
      name: svc-pytest-foo-3-com-b
      weight: 50
  host: pytest-foo-1.com
  path: /second
  tls:
    certificate: |
    destinationCACertificate: |
    insecureEdgeTerminationPolicy: Redirect
    key: |
  termination: reencrypt
  to:
    kind: Service
    name: svc-pytest-foo-3-com
    weight: 50
  wildcardPolicy: None
