docs/config_examples/next-gen-routes/routes/route-with-target-port-health-monitor.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/balance: least-connections-node
    virtual-server.f5.com/health: |
      [
        {
          "send": "HTTP GET /",
          "interval": 5,
          "timeout": 10,
          "targetPort": 8080,
        }
      ]
  labels:
    f5type: systest
  name: svc-pytest-bar-1-com
  namespace: bar
spec:
  host: pytest-bar-1.com
  path: /
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: svc-pytest-bar-1-com
    weight: 100
  wildcardPolicy: None
  port:
    targetPort: 8080
