docs/config_examples/next-gen-routes/routes/sample-route-ab.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: f5-ab-route
    f5type: systest
  name: f5-demo-app-bg-route
spec:
  host: mysite.f5demo.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: f5-demo-app-route-balance
    weight: 30
  alternateBackends:
  - kind: Service
    name: f5-demo-app-route-basic
    weight: 70
