docs/config_examples/next-gen-routes/routes/sample-route-with-allow-source-range.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    # allow-source-range annotation
    virtual-server.f5.com/allow-source-range: "1.1.1.0/24,2.2.2.0/24"
  labels:
    f5type: systest
  name: test-com
  namespace: default
spec:
  host: test.com
  to:
    kind: Service
    name: svc
    weight: 100
  wildcardPolicy: None
