docs/config_examples/next-gen-routes/routes/sample-route-with-pod-concurrent-connections-annotation.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    # Pod Concurrent connection annotation
    virtual-server.f5.com/pod-concurrent-connections: 5
  labels:
    f5type: systest
  name: test-com
  namespace: default
spec:
  host: test.com
  to:
    kind: Service
    name: svc
    weight: 100
  wildcardPolicy: None
