docs/config_examples/next-gen-routes/routes/sample-route-with-waf-annotation.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    # WAF annotation
    virtual-server.f5.com/waf: /Common/WAF_Policy1
  labels:
    f5type: systest
  name: test-com
  namespace: default
spec:
  host: test.com
  to:
    kind: Service
    name: svc
    weight: 100
  wildcardPolicy: None
